k3s-cluster-apps/apps/networking/external_dynmap/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynmap
spec:
  type: ExternalName
  externalName: mc.home.lan.
