k3s-cluster-apps/apps/networking/external_dynmap/traefikCRD.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dynmap
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mc.${SECRET_CLUSTER_DOMAIN}`)
      services:
        - kind: Service
          name: dynmap
          port: 8123
